tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__Kevlar-AAAAAAAAAAAAAAAAAAAM0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3282,
  "prerequisites": [
    2613
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There is a new material that can be used for some high tier crafts. The production line is long and tedious but you should know how to use NEI by now, right?\n\n[note]Hint: If you don't feel like automating a 52 step chemical line, you could also have a look at the Kevlar bee.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Kevlar",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2613
  ],
  "rewards": [],
  "tasks": []
}
