tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__MaintenanceFreeA-AAAAAAAAAAAAAAAAAAAHMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1840,
  "prerequisites": [
    2008
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll never §oever§r need to fix maintenance problems on any multi that has this, nor will it cost parts. Well, except to make it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Maintenance Free At Last!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2008
  ],
  "rewards": [],
  "tasks": []
}
