tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__QuantumPowerICs-AAAAAAAAAAAAAAAAAAAKSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2633,
  "prerequisites": [
    2041
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You need Quantum Power ICs for UEV -> UIV and UIV -> UMV transformers, and UHV Hatches and Dynamos.\n\n[note]You'll need a UHV Cutting Machine, or an OC'd multi to actually cut the wafers.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quantum Power ICs",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2041
  ],
  "rewards": [],
  "tasks": []
}
